[gd_scene load_steps=84 format=2]

[ext_resource path="res://Images/shopScene/Skins/sprite_0.png" type="Texture" id=1]
[ext_resource path="res://Extras/pc.tres" type="DynamicFont" id=2]
[ext_resource path="res://Music/Neonlit Encounters.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scenes/MainGame.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MusicPlayer.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=6]
[ext_resource path="res://Effects/explosion.png" type="Texture" id=7]
[ext_resource path="res://Music/explode-6.wav" type="AudioStream" id=8]
[ext_resource path="res://Images/shopScene/Skins/sprite_2.png" type="Texture" id=9]
[ext_resource path="res://Images/shopScene/Skins/sprite_8.png" type="Texture" id=10]
[ext_resource path="res://Images/shopScene/Skins/sprite_5.png" type="Texture" id=11]
[ext_resource path="res://Images/shopScene/Skins/sprite_7.png" type="Texture" id=12]
[ext_resource path="res://Images/shopScene/Skins/sprite_1.png" type="Texture" id=13]
[ext_resource path="res://Images/shopScene/Skins/sprite_4.png" type="Texture" id=14]
[ext_resource path="res://Images/shopScene/Skins/sprite_3.png" type="Texture" id=15]
[ext_resource path="res://Images/shopScene/Skins/sprite_6.png" type="Texture" id=16]
[ext_resource path="res://Music/coin-1.wav" type="AudioStream" id=17]
[ext_resource path="res://Music/collect-1.wav" type="AudioStream" id=18]
[ext_resource path="res://Music/collect-4.wav" type="AudioStream" id=19]
[ext_resource path="res://Music/explode-1.wav" type="AudioStream" id=20]
[ext_resource path="res://Music/laser-4.wav" type="AudioStream" id=21]
[ext_resource path="res://Images/shopScene/Skins/predeath.png" type="Texture" id=22]
[ext_resource path="res://Scenes/CollisionCheck.gd" type="Script" id=23]
[ext_resource path="res://Music/Awakening Trouble.ogg" type="AudioStream" id=24]
[ext_resource path="res://Music/Awakening Slowly.ogg" type="AudioStream" id=25]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1280, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1792, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 768, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1280, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1792, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 768, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1280, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1792, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 256, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 768, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1280, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1792, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 256, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 768, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1280, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1792, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 256, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 768, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1280, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1792, 1536, 256, 256 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "death",
"speed": 30.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "id_4",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "id_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "id_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "id_3",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "id_0",
"speed": 1.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "id_8",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "id_5",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "id_7",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "predeath",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "id_6",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 134.209, 2.5556 )

[sub_resource type="RectangleShape2D" id=57]
extents = Vector2( 1.58703, 223.129 )

[sub_resource type="RectangleShape2D" id=58]
extents = Vector2( 14.4254, 15.7745 )

[node name="MainGame" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 270.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 100.0
margin_top = 59.0
margin_right = 168.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = 4.90491
margin_top = 4.2542
margin_right = 180.905
margin_bottom = 20.2542
custom_fonts/font = ExtResource( 2 )
text = "High Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music-1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
bus = "Music"
script = ExtResource( 5 )

[node name="Music-2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -10.0
bus = "Music"
script = ExtResource( 5 )

[node name="Music-3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -10.0
bus = "Music"
script = ExtResource( 5 )

[node name="HighScore" type="Label" parent="."]
margin_left = 185.091
margin_top = 5.23842
margin_right = 225.091
margin_bottom = 19.2384
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 135, 400 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 6 )

[node name="Sprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 55 )
animation = "id_0"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
polygon = PoolVector2Array( -16.8573, 15.7806, -0.0794525, -16.6311, 16.3171, 16.1619 )

[node name="Death" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Coin" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 17 )
volume_db = -10.0
bus = "SFX"

[node name="Star" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 18 )
volume_db = -10.0
bus = "SFX"

[node name="Spell" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 19 )
volume_db = -5.0
bus = "SFX"

[node name="Break" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 20 )
volume_db = -5.0
bus = "SFX"

[node name="Special" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 21 )
volume_db = -5.0
bus = "SFX"

[node name="IdleDeath" type="Timer" parent="Player"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="IdleDeathWarning" type="Timer" parent="Player"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="IdleDeathAnimation" type="Timer" parent="Player"]
wait_time = 0.1

[node name="BouncePower" type="Timer" parent="Player"]
wait_time = 15.0
one_shot = true

[node name="SpeedPower" type="Timer" parent="Player"]
one_shot = true

[node name="VerticalLimits" type="StaticBody2D" parent="."]
position = Vector2( 137.793, 290.494 )

[node name="Up" type="CollisionShape2D" parent="VerticalLimits"]
position = Vector2( -3.86176, -198.24 )
shape = SubResource( 56 )

[node name="Down" type="CollisionShape2D" parent="VerticalLimits"]
position = Vector2( -3.20392, 252.897 )
shape = SubResource( 56 )

[node name="HorizontalLimits" type="StaticBody2D" parent="."]
position = Vector2( 139.45, 287.616 )

[node name="Left" type="CollisionShape2D" parent="HorizontalLimits"]
position = Vector2( -141.49, 30.2854 )
shape = SubResource( 57 )

[node name="Right" type="CollisionShape2D" parent="HorizontalLimits"]
position = Vector2( 131.672, 28.6978 )
shape = SubResource( 57 )

[node name="TryToSpawn" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CollisionCheck" type="Area2D" parent="."]
script = ExtResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionCheck"]
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 58 )

[node name="Timer" type="Timer" parent="CollisionCheck"]
wait_time = 0.1
one_shot = true
[connection signal="finished" from="Music-1" to="Music-1" method="_on_MusicPlayer_finished"]
[connection signal="finished" from="Music-2" to="Music-2" method="_on_MusicPlayer_finished"]
[connection signal="finished" from="Music-3" to="Music-3" method="_on_MusicPlayer_finished"]
[connection signal="animation_finished" from="Player/Sprite" to="Player" method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Player/IdleDeath" to="Player" method="_on_IdleDeath_timeout"]
[connection signal="timeout" from="Player/IdleDeathWarning" to="Player" method="_on_IdleDeathWarning_timeout"]
[connection signal="timeout" from="Player/IdleDeathAnimation" to="Player" method="_on_IdleDeathAnimation_timeout"]
[connection signal="timeout" from="Player/BouncePower" to="Player" method="_on_BouncePower_timeout"]
[connection signal="timeout" from="Player/SpeedPower" to="Player" method="_on_SpeedPower_timeout"]
[connection signal="timeout" from="TryToSpawn" to="." method="_on_TryToSpawn_timeout"]
[connection signal="area_entered" from="CollisionCheck" to="CollisionCheck" method="_on_CollisionCheck_area_entered"]
[connection signal="body_entered" from="CollisionCheck" to="CollisionCheck" method="_on_CollisionCheck_body_entered"]
[connection signal="safe_area" from="CollisionCheck" to="." method="_on_CollisionCheck_safe_area"]
[connection signal="timeout" from="CollisionCheck/Timer" to="CollisionCheck" method="_on_Timer_timeout"]
